--- a/jadi satu/nbproject/project.properties
+++ b/jadi satu/nbproject/project.properties
@@ -29,7 +29,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.beans-binding.classpath}:\
+    ${libs.CopyLibs.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
